bin_PROGRAMS = abe

abe_SOURCES = \
	Common.h\
	Directories.c\
	Directories.h\
	Editor.c\
	Editor.h\
	Font.c\
	Font.h\
	Game.c\
	Game.h\
	Icons.c\
	Icons.h\
	Image.c\
	Image.h\
	Main.c\
	Main.h\
	Map.c\
	Map.h\
	MapIO.c\
	MapIO.h\
	Menu.c\
	Menu.h\
	Monster.c\
	Monster.h\
	Sound.c\
	Sound.h\
	Splash.c\
	Splash.h\
	Trans.c\
	Trans.h\
	Util.c\
	Util.h
